testing/framework/resources/Advanced/Failing/mondrian/query5660.q
select alt_promotion.promo_id as c0, alt_promotion.promo_name as c1 from (SELECT * FROM (VALUES (0, 'First promo'), (1, 'Second promo')) AS t (promo_id, promo_name)) as alt_promotion group by alt_promotion.promo_id, alt_promotion.promo_name order by alt_promotion.promo_id ASC NULLS LAST;
